fixes a few background display problems regarding color and z-index

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -6,7 +6,6 @@
     left: 0;
     width: 100%;
     text-align: middle;
-    background-color: #FFFFFF;
     &__backdrop {
         display: none;
         @media (min-width: $breakpoint) {
@@ -20,6 +19,7 @@
         }
     }
     &__main {
+        position: relative;
         box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
         width: 100%;
         z-index: 1;
@@ -33,6 +33,7 @@
         }
     }
     &__nav {
+        background-color: #FFFFFF;
         position: relative;
         overflow: hidden;
         height: 210px;
@@ -45,6 +46,7 @@
             }
         }
         @media (min-width: $breakpoint) {
+            background-color: transparent;
             z-index: 1;
             display: inline-block;
             width: 75%;
